--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 				</ol>
 			</div>
 		</div>
-
+		
+		<script src="scripts/Phrase.js"></script>
+		<script src="scripts/Game.js"></script>
+		<script src="scripts/app.js"></script>
 	</body>
 </html>
