--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 				</ol>
 			</div>
 		</div>
-		
+		<script src="scripts/phrases.js"></script>
 		<script src="scripts/Phrase.js"></script>
+		<script src="scripts/Player.js"></script>
 		<script src="scripts/Game.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
