Add finishing touches and updated readme

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 	<body>
 		<div class="main-container">
-			<div id="overlay" class="start">
+			<div id="overlay" class="start animated">
 				<h2 class="title">Phrase Hunter</h2>
 				<h1 id = "game-over-message"></h1>
+				<h3 id="winning-phrase"></h3>
 				<button id ="btn__reset">Start Game</button>
 			</div>
 
@@ -78,7 +79,6 @@
 		<script src="scripts/phrases.js"></script>
 		<script src="scripts/Letter.js"></script>
 		<script src="scripts/Phrase.js"></script>
-		<script src="scripts/Player.js"></script>
 		<script src="scripts/Game.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
